--- a/code/Glasquare/src/main/res/values/strings.xml
+++ b/code/Glasquare/src/main/res/values/strings.xml
@@ -20,6 +20,11 @@
     <string name="add_photo">Add photo</string>
     <string name="change_shout">Change shout</string>
     <string name="popular_tip">Popular tip: %s</string>
+    <string name="default_shout">#throughglass</string>
     <string name="no_venues_found">No venues found</string>
+    <string name="user_id_self">self</string>
     <string name="grace_period_text">Tap for options</string>
+    <string name="mention_friend">Mention friend</string>
+    <string name="voice_prompt_friend_name">What is your friend\'s first name?</string>
+    <string name="no_friends_found">No friends found</string>
 </resources>
